--- a/package.json
+++ b/package.json
@@ -4,5 +4,17 @@
   "description": "A mini Social network for Tedu Community",
   "main": "src/server.ts",
   "author": "Hung",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "server": "nodemon src/server.ts"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
+  }
 }
